--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <link rel="stylesheet" href="base.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <h1>Hello World test</h1>
-
-
-  <script src="app.js"></script>
+<body id='bod'>
+  <div id='brand_select'>
+    <button id='yam'></button>
+    <button id='honda'></button>
+    <button id='kawa'></button>
+    <button id='ktm'></button>
+    <button id='husq'></button>
+    <button id='suz'></button>
+  </div>
+  <script src='app.js'></script>
 </body>
 </html>
