--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body id='bod'>
-  <div id='brand_select'>
-    <button id='yam'></button>
-    <button id='honda'></button>
-    <button id='kawa'></button>
-    <button id='ktm'></button>
-    <button id='husq'></button>
-    <button id='suz'></button>
-  </div>
+  <header>
+    <div id='brand_select'>
+      <button id='yam'></button>
+      <button id='honda'></button>
+      <button id='kawa'></button>
+      <button id='ktm'></button>
+      <button id='husq'></button>
+      <button id='suz'></button>
+    </div>
+    <div id="brand_font">
+      <h1></h1>
+      <img src="" alt="logo_selected_brand" hidden>
+    </div>
+  </header>
   <script src='app.js'></script>
 </body>
 </html>
