--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       <h1></h1>
       <img src="" alt="logo_selected_brand" hidden>
     </div>
+    <div id="pimp">
+      <h1 id="pimp_me">What an intersting text ?! You may can play with me ?</h1>
+      <label for="txt_color">You may can change my color ?</label>
+      <input type="color" name="txt_color" class='btn_color'>
+      <br>
+      <label for="width">Or my width?</label>
+      <input type="range" name="width" id="btn_width">
+      <br>
+      <label for="height">Or even my height.</label>
+      <input type="range" name="height" id="btn_height">
+      <br>
+    </div>
   </header>
   <script src='app.js'></script>
 </body>
