Color & Size features works

--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
       <img src="" alt="logo_selected_brand" hidden>
     </div>
     <div id="pimp">
-      <h1 id="pimp_me">What an intersting text ?! You may can play with me ?</h1>
       <label for="txt_color">You may can change my color ?</label>
       <input type="color" name="txt_color" class='btn_color'>
+      <br>  
+      <label for="size">Or my size.</label>
+      <input type="button" id="btn_size_less" name="size" value="-">
+      <input type="button" id="btn_size_more" name="size" value="+">
       <br>
-      <label for="width">Or my width?</label>
-      <input type="range" name="width" id="btn_width">
-      <br>
-      <label for="height">Or even my height.</label>
-      <input type="range" name="height" id="btn_height">
-      <br>
+      <h1 id="pimp_me">What an intersting text ?! You may can play with me ?</h1>
     </div>
   </header>
   <script src='app.js'></script>
